fix alignment / margin for iframe within popup

--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -149,6 +149,7 @@ body {
 }
 
 .playlist-prompt-div {
+  text-align: center;
   margin: 0 auto;
   border-radius: 5px;
   width: 300px;
@@ -172,7 +173,6 @@ body {
   height: 380px;
   border: 1px;
   box-shadow: 0 4px 8px 0 rgba( 0, 0, 0, 0.2 ), 0 6px 20px 0 rgba( 0, 0, 0, 0.19 );
-  margin-left: 25px;
 }
 
 .playlist-button {
